Cleaned up directory structure and filenames

--- a/index.html
+++ b/index.html
@@ -1,44 +1,26 @@
-
+<!DOCTYPE html>
 <html>
-   
 <head>
 	<title>Fabsta</title>
 	<link href="styles/main.css" rel="stylesheet" type="text/css" />
-
-<link href="styles/2.css" rel="stylesheet" type="text/css" />
-
-
 </head>
-
 <body>
 	<header>
 		<h1>fabsta</h1>
 		<nav>
-
 			<ul>
 					<li>Home</li>
-					<li><a href="page2.html">About</a></li>					
-					<li><a href="page3.html">Contact</a></li>
+					<li><a href="about.html">About</a></li>					
+					<li><a href="contact.html">Contact</a></li>
 			</ul>
 
 		</nav>
 	</header>	
 
-	
 	<footer>Copyright 2017 -|- Fabsta inc.</footer>
 
-
-
-	<h1>         My Posts:</h1>
-	<h4>     Scroll down to view my posts...</h7> <br> <br>
-
-____________________________________________________________________________________________<br> <br> <br> <br> <br> <br>
-
-No posts yet...<br>
-But they are coming soon!!
-
-
+	<h1>My Posts:</h1>
+	<h4>Scroll down to view</h4>
 
 </body>
-
 </html>
