--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<h1>fabsta</h1>
+		<h1 class="h1">fabsta</h1>
 		<nav>
 			<ul>
 					<li>Home</li>
@@ -23,4 +23,10 @@
 	<h4>Scroll down to view</h4>
 
 </body>
+
+<!--CDN link for  TweenMax-->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
+
+<script src="js/animations.js"></script>
+
 </html>
