Fixed html formatting. Removed redundant files. Fixed css

--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
 </head>
 <body>
 	<header>
-		<h1 class="h1">fabsta</h1>
+		<h1 class="fabsta">fabsta</h1>
 		<nav>
 			<ul>
 					<li>Home</li>
 					<li><a href="about.html">About</a></li>					
 					<li><a href="contact.html">Contact</a></li>
 			</ul>
-
 		</nav>
 	</header>	
 
-	<footer>Copyright 2017 -|- Fabsta inc.</footer>
+	<div class="content">
+		<h1>My Posts:</h1>
+		<h4>Scroll down to view</h4>
+	</div>
 
-	<h1>My Posts:</h1>
-	<h4>Scroll down to view</h4>
+	<footer>
+		Copyright 2017 -|- Fabsta inc.
+	</footer>
 
 </body>
 
